--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<h1>hello js rocket</h1>
-	<a href="#" onclick="car.switchCar(true);
-	">CLICK ME!
+	<a href="#" onclick="car.fly();"
+	>CLICK ME!
 	</a>
 </body>
 </html>
